--- a/flower.html
+++ b/flower.html
@@ -30,6 +30,10 @@
           <div class="flower__light flower__light--8"></div>
   
         </div>
+        <div class="flower__white-circle">
+          <div class="flower__stamens"></div> <!-- Estambres -->
+          <div class="flower__pistil"></div>  <!-- Pistilo -->
+        </div>
         <div class="flower__line">
           <div class="flower__line__leaf flower__line__leaf--1"></div>
           <div class="flower__line__leaf flower__line__leaf--2"></div>
@@ -57,6 +61,10 @@
           <div class="flower__light flower__light--7"></div>
           <div class="flower__light flower__light--8"></div>
   
+        </div>
+        <div class="flower__white-circle">
+          <div class="flower__stamens"></div> <!-- Estambres -->
+          <div class="flower__pistil"></div>  <!-- Pistilo -->
         </div>
         <div class="flower__line">
           <div class="flower__line__leaf flower__line__leaf--1"></div>
@@ -89,6 +97,10 @@
           <div class="flower__line__leaf flower__line__leaf--2"></div>
           <div class="flower__line__leaf flower__line__leaf--3"></div>
           <div class="flower__line__leaf flower__line__leaf--4"></div>
+        </div>
+        <div class="flower__white-circle">
+          <div class="flower__stamens"></div> <!-- Estambres -->
+          <div class="flower__pistil"></div>  <!-- Pistilo -->
         </div>
       </div>
   
